Fixed missing color settings

--- a/framework.less
+++ b/framework.less
@@ -41,7 +41,7 @@ section
 
     // Default popover colors
     --sv-popover-backcolor: var(--sv-dark);
-    --sv-popover-forecolor: var(--sv-forecolor);
+    --sv-popover-forecolor: var(--sv-body-forecolor);
     --sv-popover-titlecolor: var(--sv-secondary);
 
     // Default menu colors
@@ -50,7 +50,7 @@ section
 
     // Default dialog colors
     --sv-dialog-backcolor: var(--sv-dark);
-    --sv-dialog-forecolor: var(--sv-forecolor);
+    --sv-dialog-forecolor: var(--sv-body-forecolor);
     --sv-dialog-inner-bordercolor: var(--sv-secondary);
 }
 
